# enviroplus-monitor

./: .gitignore  .markdownlint.json  Pipfile  README.md  asyncapi.yaml  config.ini  enviroplusmonitor.service  enviroplusmonitor.toml  install-dependencies.sh  json-schema-code-gen.py  mypy.ini  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_codegen.sh  run_enviroplusmonitor.sh  schema.yaml  schemas.yaml  setup.py
docs/: code.rst  conf.py  index.rst
enviroplusmonitor/: __main__.py  _version.py  app.py  enviroplusmonitor.py  logging.json  q__main__.py
enviroplusmonitor/classes/: bme280Measurement.py  bme280MeasurementPayload.py  configPayload.py  measurement.py  measurementRecord.py  mics6814MeasurementPayload.py  sensorRecord.py
enviroplusmonitor/resources/: config-example.ini  config.ini
enviroplusmonitor/schemas/: bme280Measurement.yaml  bme280MeasurementPayload.yaml  configPayload.yaml  measurement.yaml  measurementRecord.yaml  mics6814MeasurementPayload.yaml
enviroplusmonitor/sensors/: dht22.py  dht22_measurement.py  gas.py  weather.py
enviroplusmonitor/utilities/: configurationhandler.py  homeassistanthandler.py  influxdbclienthandler.py  jobhandler.py  (+3 more)
resources/: config.ini
schemas/: bme280Measurement.yaml  bme280MeasurementPayload.yaml  measurementRecord.yaml  sensorRecord.yaml
tests/: context.py  notest_gas_sensor_readings.py  notest_sensors_gas.py  notest_sensors_weather.py  notest_weather_sensor_readings.py  test_app.py  test_app_parse_args.py  test_my_utils.py  test_publish_influx_measurement.py
(+5 files in other folders)
