[project]
name = "Python Project"
version = "0.1.0"
description = "Base Python project to learn structure, testing and documentation"
authors = [
    "Philip Cutler <[email protected]>"
]
license = "MIT"
readme = "README.md"
python = "^3.7"
homepage = "https://github.com/greenthegarden/python-project"
repository = "https://github.com/greenthegarden/python-project"
documentation = "https://github.com/greenthegarden/python-project"

keywords = ["packaging", "dependency", "infer", "testing", "logging", "automation"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]
Click = "^7.0"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
    "setuptools>=40.8.0"
]
build-backend = "setuptools.build_meta"
